--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 services:
   postgres-course-db:
-    image: devenbhooshan/postgres-course-db
+    image: devenbhooshan/postgres-course-db:week-2
   postgres-course-web:
-    image: devenbhooshan/postgres-course-web
+    image: devenbhooshan/postgres-course-web:week-2
     ports:
       - "7681:7681"
