--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  postgres-course-db:
+  postgres-course-db-fixed:
     image: devenbhooshan/postgres-course-db:week-2
   postgres-course-web:
     image: devenbhooshan/postgres-course-web:week-2
